feat(api): add runtime settings
